--- a/translation models/MarianMT/README
+++ b/translation models/MarianMT/README
@@ -1,2 +1,2 @@
 Here is a translation application you can run locally by following the steps in Translation_example_with_MarianMT.ipynb file and there is a sample of input and output in
-.txt files
+.txt files.
