--- a/translation models/Translation function/README
+++ b/translation models/Translation function/README
@@ -1,1 +1,2 @@
-
+The function in the notebook gets an input text and detects the language and also gets the language user wants to be translated in and the user can choose 
+the desired model.
